--- a/navcss.css
+++ b/navcss.css
@@ -9,6 +9,7 @@ nav{
     color: white;
     justify-content: space-between;
     align-items: center;
+    padding: 0 15px;
 }
 nav ul {
     display: flex;
@@ -28,5 +29,26 @@ nav ul li a{
     color:white;
 }
 body{
-    background-color: aquamarine;
+    background-color: rgb(101, 200, 247);
+}
+button{
+    border: none;
+    width: 60px;
+    height: 25px;
+    border-radius: 8px;
+    padding: 2px;
+    color: white;
+    font-weight: bold;
+}
+
+.sup{
+    background-color: rgb(30, 255, 0);
+}
+.sin{
+    background-color: rgb(33, 45, 209);
+}
+
+nav ul li a:hover{
+    color:rgb(20, 130, 255)
+ 
 }
